# medicalterms

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README-medicalterms.md  README.md  README.medicalterms  configure  configure.ac
dicts/: Makefile.am  Makefile.in  abkuerzungen-x-de_all-medicalterms.txt  adjektive-de_all-medicalterms.txt  de-medical.multi  ergaenzungen-xx-de_all-medicalterms.txt  german.aff  medizin-a-de_all-medicalterms.txt  medizin-a.txt  medizin-abkuerzungen.txt  medizin-ergaenzungen.txt  medizin-n-de_all-medicalterms.txt  medizin-n.txt  medizin-namen.txt  medizin-verben-adjektive.txt  medizin-wirkstoffe.txt  medizin-xx-de_all-medicalterms.txt  medizin.txt  namen-x-de_all-medicalterms.txt  verben-de_all-medicalterms.txt  wirkstoffe-x-de_all-medicalterms.txt
