# Makefile for the dicts subdirectory
## Process this file with automake to produce Makefile.in
#
# Copyright (C) 2005-2008 Tobias Toedter <t.toedter@gmx.net>
#
# This file is part of Medicalterms.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

EXTRA_DIST = \
	abkuerzungen-x-de_all-medicalterms.txt \
	adjektive-de_all-medicalterms.txt \
	ergaenzungen-xx-de_all-medicalterms.txt \
	medizin-a-de_all-medicalterms.txt \
	medizin-n-de_all-medicalterms.txt \
	medizin-xx-de_all-medicalterms.txt \
	namen-x-de_all-medicalterms.txt \
	verben-de_all-medicalterms.txt \
	wirkstoffe-x-de_all-medicalterms.txt
